--- a/merged-deployment.yaml
+++ b/merged-deployment.yaml
@@ -8,7 +8,7 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 2288
     # - protocol: TCP
     #   port: 81
     #   targetPort: 8081
@@ -33,8 +33,16 @@ spec:
     spec:
       containers:
       - name: first-app
-        image: phambchungdev/first-app:1.4
-        imagePullPolicy: Always
+        image: phambchungdev/k8s-app:1.1
+        volumeMounts:
+          - name: data-log
+            mountPath: /app/data
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 2288
+          initialDelaySeconds: 10
+          periodSeconds: 5
         resources:
           limits:
             memory: 512Mi
@@ -42,3 +50,9 @@ spec:
           requests:
             memory: 256Mi
             cpu: "0.2"
+      volumes:
+        - name: data-log
+          # emptyDir: {}
+          hostPath:
+            path: /data
+            type: DirectoryOrCreate
